# sabnzbd-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  LICENSE  README.md  SECURITY.md  docker-compose.yml  mcp-config.json  opencode.json  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/recipes/: automation-pipeline.md
scripts/: check-assets.ts
src/sabnzbd_mcp/: __init__.py  __main__.py  server.py
tests/: test_integration.py  test_mcp_features.py  test_server.py
