[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sabnzbd-mcp"
version = "0.2.0"
description = "MCP server for SABnzbd — control Usenet downloads from any AI agent"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "sabnzbd", "usenet", "downloader", "ai-agent", "model-context-protocol"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/zz-plant/sabnzbd-mcp"
Repository = "https://github.com/zz-plant/sabnzbd-mcp"
Changelog = "https://github.com/zz-plant/sabnzbd-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
sabnzbd-mcp = "sabnzbd_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
